<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"

    tools:context="com.example.radik.worldoffractals.BuildManager">


    <ImageView
        android:id="@+id/container"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher"
        app:layout_constraintHorizontal_bias="0.494" />

    <Button
        android:id="@+id/but1"
        android:layout_width="85dp"
        android:layout_height="40dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btnbackground"
        android:text="@string/mandelbrot"
        android:textSize="13sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container" />

    <Button
        android:id="@+id/but2"
        android:layout_width="85dp"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btnbackground"
        android:text="@string/julia"
        app:layout_constraintLeft_toRightOf="@+id/but1"
        app:layout_constraintRight_toLeftOf="@+id/but3"
        app:layout_constraintTop_toBottomOf="@+id/container" />

    <Button
        android:id="@+id/but3"
        android:layout_width="85dp"
        android:layout_height="40dp"
        android:layout_marginRight="43dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btnbackground"
        android:text="@string/newton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container" />

    <Button
        android:id="@+id/but4"
        android:layout_width="85dp"
        android:layout_height="40dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/btnbackground"
        android:text="@string/tree"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/but1" />

    <Button
        android:id="@+id/but5"
        android:layout_width="85dp"
        android:layout_height="40dp"
        android:background="@drawable/btnbackground"
        android:text="@string/starsc"
        app:layout_constraintLeft_toRightOf="@+id/but4"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="13dp"
        app:layout_constraintTop_toBottomOf="@+id/but2" />

    <Button
        android:id="@+id/but6"
        android:layout_width="85dp"
        android:layout_height="40dp"
        android:background="@drawable/btnbackground"
        android:text="@string/chip"
        app:layout_constraintLeft_toRightOf="@+id/but5"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="13dp"
        app:layout_constraintTop_toBottomOf="@+id/but3" />

    <Button
        android:id="@+id/but9"
        android:layout_width="85dp"
        android:layout_height="40dp"
        android:background="@drawable/btnbackground"
        android:text="@string/kamtorus"
        app:layout_constraintLeft_toRightOf="@+id/but8"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/but6" />

    <Button
        android:id="@+id/but8"
        android:layout_width="85dp"
        android:layout_height="40dp"
        android:background="@drawable/btnbackground"
        android:text="@string/cross"
        app:layout_constraintLeft_toRightOf="@+id/but7"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/but5" />

    <Button
        android:id="@+id/but7"
        android:layout_width="85dp"
        android:layout_height="40dp"
        android:background="@drawable/btnbackground"
        android:text="@string/star"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/but4"
        android:layout_marginLeft="35dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageButton
        android:id="@+id/soundbtn"
        android:layout_width="35dp"
        android:layout_height="31dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/btnbackground"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/but8"
        app:srcCompat="@android:drawable/ic_lock_silent_mode" />

    <ImageButton
        android:id="@+id/soundbtnplay"
        android:layout_width="35dp"
        android:layout_height="31dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/btnbackground"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/but8"
        app:srcCompat="@android:drawable/ic_media_play" />

    <ImageButton
        android:id="@+id/exit"
        android:layout_width="35dp"
        android:layout_height="31dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/btnbackground"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toRightOf="@+id/soundbtnplay"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/but8"
        app:srcCompat="@android:drawable/ic_delete" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="35dp"
        android:layout_height="31dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/btnbackground"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/soundbtnplay"
        app:layout_constraintTop_toBottomOf="@+id/but8"
        app:srcCompat="@android:drawable/ic_menu_save" />

</android.support.constraint.ConstraintLayout>
